# fuel_project

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  fuel_prices.csv  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/management/commands/: load_fuel_data.py  load_fuel_data_geocodio.py
api/migrations/: 0001_initial.py
fuel_project/: asgi.py  settings.py  urls.py  wsgi.py
